--- a/v2.com.conf
+++ b/v2.com.conf
@@ -38,7 +38,7 @@ server {
        deny  all;
     }
     
-    if ($query_string ~* ".*\b(union|insert|create|drop|truncate|update|from|load|grant|exec|where|select|and|or|count|chr|mid|like|script|alter)\b.*")
+    if ($query_string ~* ".*\b(union|insert|create|drop|truncate|update|load|grant|exec|where|select|and|or|count|chr|mid|like|script|alter)\b.*")
     { 
         return 403; 
     }
