--- a/v2.com.conf
+++ b/v2.com.conf
@@ -43,7 +43,7 @@ server {
         return 403; 
     }
 
-    if ($query_string ~* ".*(call_user_func_array|invokefunction|mb_ereg_replace|\$_REQUEST|\$_POST|\$_GET|file_put_contents|preg_|array_).*")
+    if ($query_string ~* ".*(call_user_func_array|invokefunction|mb_ereg_replace|@eval|xbshell1|\$_REQUEST|\$_POST|\$_GET|file_put_contents|preg_|array_).*")
     {
      	return 403;
     }
